syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.ray.app.grpc";
option java_outer_classname = "VehicleServiceImpl";
package vehicle;

service VehicleService {
  rpc addVehicle (Vehicle) returns (Vehicle) {}
  rpc getVehicles (VehicleFilter) returns (stream Vehicle) {}
  rpc update (Vehicle) returns (Vehicle) {}
  rpc addCategory (stream VehicleCategory) returns (Success) {}
  rpc getCategories (CategoryFilter) returns (stream VehicleCategory) {}
  rpc confirmAvailability(Vehicle) returns (Vehicle) {}
  rpc getVehicle(Vehicle) returns (Vehicle) {}

}

message Vehicle {
  string make = 1;
  string model = 2;
  int32 year = 3;
  string color = 4;
  int32 mileage = 5;
  double rent_price = 6;
  string engine_type = 7;
  string fuel_type = 8;
  string transmission = 9;
  double ride_price = 10;
  string fileName = 11;
  bytes image = 12;
  string owner_name = 13;
  string owner_email = 14;
  bool is_available_for_rent = 15;
  bool is_available_for_ride_hailing = 16;
  VehicleCategory category = 17;
  int32 id = 18;
  string plate_no = 19;
  string body_type = 20;
  bool loadImage = 21;
  string status = 23;
  string error = 24;
  double rating = 25;
}

message VehicleCategory {
  string name = 1;
  string description = 2;
  string fileName = 3;
  bytes image = 4;
  int32 id = 6;
  bool loadImage = 7;
  string error = 8;
  string ownerEmail = 9;
}

message VehicleFilter {
  bool byRating = 1;
  bool byDateAdded = 2;
  string query = 3;
  int32 limit = 4;
  string category_name = 5;
}

message CategoryFilter {
  string query = 2;
  int32 limit = 4;
}

message Success {
  bool success = 2;
}

